--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,3 +1,8 @@
+
+/* Global Styles*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Solitreo&family=Sriracha&display=swap');
+
 body {
-    background-color: lightgreen;
+    background-color: purple;
+    color: white;
 }
